# Bluedove

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
BleNative/: CMakeLists.txt  Util.cpp  Util.h  entry.cpp
BleNative/jni/: NBluetoothAdapter.cpp  NBluetoothLEDevice.cpp  NBluetoothSignalStrengthFilter.cpp  NBluetoothUuidHelper .cpp  NRadio.cpp  Native.cpp  Wrapper.h
BleNative/jni/advertisement/: NBluetoothLEAdvertisement.cpp  NBluetoothLEAdvertisementReceivedEventArgs.cpp  NBluetoothLEAdvertisementWatcher.cpp
BleNative/jni/genericAttributeProfile/: NGattCharacteristic.cpp  NGattCharacteristicsResult.cpp  NGattDeviceService.cpp  NGattDeviceServicesResult.cpp  NGattReadResult.cpp
BleNative/jni/winrt/: NAsyncOperation.cpp  NGUID.cpp
BleNative/jni_generated/: dev_qingwan_bluedove_BluetoothAdapter.h  dev_qingwan_bluedove_BluetoothLEDevice.h  dev_qingwan_bluedove_BluetoothSignalStrengthFilter.h  dev_qingwan_bluedove_BluetoothUuidHelper.h  dev_qingwan_bluedove_Native.h  dev_qingwan_bluedove_advertisement_BluetoothLEAdvertisement.h  dev_qingwan_bluedove_advertisement_BluetoothLEAdvertisementWatcher.h  dev_qingwan_bluedove_advertisement_BluetoothLEAdvertisementWatcher_BluetoothLEAdvertisementReceivedEventArgs.h  dev_qingwan_bluedove_genericAttributeProfile_GattCharacteristic.h  dev_qingwan_bluedove_genericAttributeProfile_GattCharacteristicsResult.h  dev_qingwan_bluedove_genericAttributeProfile_GattDeviceService.h  dev_qingwan_bluedove_genericAttributeProfile_GattDeviceServicesResult.h  dev_qingwan_bluedove_genericAttributeProfile_GattReadResult.h  dev_qingwan_bluedove_winrt_AsyncOperation.h  dev_qingwan_bluedove_winrt_GUID.h
gradle/wrapper/: gradle-wrapper.properties
src/main/java/dev/qingwan/bluedove/: AutoManageWrapper.java  BaseListener.java  Native.java  (+7 more)
src/main/kotlin/: Main.kt
src/test/kotlin/: Main.kt
(+13 files in other folders)
